--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-vue": "5.2.2",
+    "husky": "1.3.1",
     "jest": "24.1.0",
     "jest-preset-stylelint": "1.3.0",
     "markdownlint-cli": "0.13.0",
