--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veobot/stylelint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Veo Robotics Stylelint rules for all CSS / SCSS styles",
   "author": {
     "name": "Ty-Lucas Kelley",
@@ -51,9 +51,9 @@
     ]
   },
   "peerDependencies": {
-    "stylelint": "^9.10.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-processor-html": "^1.0.0"
+    "stylelint": "9.10.0",
+    "stylelint-config-standard": "18.2.0",
+    "stylelint-processor-html": "1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
@@ -61,7 +61,7 @@
     "@babel/preset-env": "7.3.1",
     "@typescript-eslint/eslint-plugin": "1.4.0",
     "@typescript-eslint/parser": "1.4.0",
-    "@veobot/eslint-config": "1.0.0",
+    "@veobot/eslint-config": "1.1.0",
     "@vue/eslint-config-typescript": "4.0.0",
     "babel-jest": "24.1.0",
     "babel-polyfill": "6.26.0",
@@ -69,17 +69,16 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jest": "22.3.0",
     "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-react": "7.12.4",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-vue": "5.2.2",
     "husky": "1.3.1",
     "jest": "24.1.0",
     "jest-preset-stylelint": "1.3.0",
     "markdownlint-cli": "0.13.0",
-    "react": "16.8.2",
-    "stylelint": "9.10.1",
+    "stylelint": "9.10.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-processor-html": "1.0.0",
-    "typescript": "3.3.3"
+    "typescript": "3.3.3",
+    "vue-eslint-parser": "6.0.2"
   }
 }
