--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@veobot/stylelint-config",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Veo Robotics Stylelint rules for all CSS / SCSS styles",
   "author": {
     "name": "Ty-Lucas Kelley",
-    "email": "ty@greylocklabs.com",
-    "url": "https://tylucaskelley.com"
+    "email": "ty@veobot.com"
   },
   "homepage": "https://github.com/veobot/stylelint-config",
   "bugs": "https://github.com/veobot/stylelint-config/issues",
@@ -18,28 +17,32 @@
     "stylelint",
     "stylelint-config",
     "lint",
+    "javascript",
+    "typescript",
     "css",
     "sass",
     "scss",
     "vue"
   ],
   "scripts": {
-    "lint": "npm run lint:js && npm run lint:md",
+    "preinstall": "node -e \"if (!~process.env.npm_execpath.indexOf('yarn')) throw new Error('Install dependencies with yarn, not npm')\"",
+    "lint": "yarn lint:js && yarn lint:md",
     "lint:js": "eslint --report-unused-disable-directives index.js test/index.test.js",
     "lint:md": "markdownlint README.md CHANGELOG.md",
-    "pretest": "npm run lint",
+    "pretest": "yarn lint",
     "test": "jest",
-    "prepublishOnly": "npm test"
+    "prepublishOnly": "yarn test"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm test"
+      "pre-commit": "yarn test",
+      "pre-push": "yarn test"
     }
   },
   "main": "index.js",
   "engines": {
-    "node": ">= 8"
+    "node": ">= 8",
+    "yarn": ">= 1.13.0"
   },
   "jest": {
     "preset": "jest-preset-stylelint",
@@ -51,34 +54,35 @@
     ]
   },
   "peerDependencies": {
-    "stylelint": "9.10.0",
-    "stylelint-config-standard": "18.2.0",
+    "stylelint": "10.1.0",
+    "stylelint-config-standard": "18.3.0",
     "stylelint-processor-html": "1.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.3.3",
-    "@babel/preset-env": "7.3.1",
-    "@typescript-eslint/eslint-plugin": "1.4.0",
-    "@typescript-eslint/parser": "1.4.0",
-    "@veobot/eslint-config": "1.1.0",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.5",
+    "@babel/preset-env": "7.4.5",
+    "@typescript-eslint/eslint-plugin": "1.10.2",
+    "@typescript-eslint/parser": "1.10.2",
+    "@veobot/eslint-config": "1.3.0",
     "@vue/eslint-config-typescript": "4.0.0",
-    "babel-jest": "24.1.0",
+    "babel-jest": "24.8.0",
     "babel-polyfill": "6.26.0",
-    "eslint": "5.14.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jest": "22.3.0",
-    "eslint-plugin-promise": "4.0.1",
+    "eslint": "5.16.0",
+    "eslint-plugin-import": "2.17.3",
+    "eslint-plugin-jest": "22.6.4",
+    "eslint-plugin-promise": "4.1.1",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-vue": "5.2.2",
-    "husky": "1.3.1",
-    "jest": "24.1.0",
+    "eslint-plugin-vue-i18n": "0.1.1",
+    "husky": "2.4.1",
+    "jest": "24.8.0",
     "jest-preset-stylelint": "1.3.0",
-    "markdownlint-cli": "0.13.0",
-    "stylelint": "9.10.0",
-    "stylelint-config-standard": "18.2.0",
+    "markdownlint-cli": "0.17.0",
+    "stylelint": "10.1.0",
+    "stylelint-config-standard": "18.3.0",
     "stylelint-processor-html": "1.0.0",
-    "typescript": "3.3.3",
-    "vue-eslint-parser": "6.0.2"
+    "typescript": "3.5.2",
+    "vue-eslint-parser": "6.0.4"
   }
 }
