--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veobot/stylelint-config",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Veo Robotics Stylelint rules for all CSS / SCSS styles",
   "author": {
     "name": "Ty-Lucas Kelley",
@@ -26,6 +26,8 @@
   ],
   "scripts": {
     "preinstall": "node -e \"if (!~process.env.npm_execpath.indexOf('yarn')) throw new Error('Install dependencies with yarn, not npm')\"",
+    "clean": "rm -rf node_modules",
+    "postclean": "yarn install",
     "lint": "yarn lint:js && yarn lint:md",
     "lint:js": "eslint --report-unused-disable-directives index.js test/index.test.js",
     "lint:md": "markdownlint README.md CHANGELOG.md",
@@ -59,30 +61,30 @@
     "stylelint-processor-html": "1.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
-    "@babel/preset-env": "7.4.5",
-    "@typescript-eslint/eslint-plugin": "1.10.2",
-    "@typescript-eslint/parser": "1.10.2",
-    "@veobot/eslint-config": "1.3.0",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
+    "@veobot/eslint-config": "1.3.1",
     "@vue/eslint-config-typescript": "4.0.0",
-    "babel-jest": "24.8.0",
+    "babel-jest": "24.9.0",
     "babel-polyfill": "6.26.0",
-    "eslint": "5.16.0",
-    "eslint-plugin-import": "2.17.3",
-    "eslint-plugin-jest": "22.6.4",
-    "eslint-plugin-promise": "4.1.1",
+    "eslint": "6.2.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.16.0",
+    "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-security": "1.4.0",
-    "eslint-plugin-vue": "5.2.2",
-    "eslint-plugin-vue-i18n": "0.1.1",
-    "husky": "2.4.1",
-    "jest": "24.8.0",
+    "eslint-plugin-vue": "5.2.3",
+    "eslint-plugin-vue-i18n": "0.2.3",
+    "husky": "3.0.4",
+    "jest": "24.9.0",
     "jest-preset-stylelint": "1.3.0",
-    "markdownlint-cli": "0.17.0",
+    "markdownlint-cli": "0.18.0",
     "stylelint": "10.1.0",
     "stylelint-config-standard": "18.3.0",
     "stylelint-processor-html": "1.0.0",
-    "typescript": "3.5.2",
+    "typescript": "3.6.2",
     "vue-eslint-parser": "6.0.4"
   }
 }
